--- a/static/oas/iot/api/public/alertList.yaml
+++ b/static/oas/iot/api/public/alertList.yaml
@@ -54,7 +54,7 @@ parameters:
     format: date-time
 responses:
   '200':
-    description: Successful Response (We only show some important fields here)
+    description: Successful Response (We only show some important fields here.)
     content:
       application/json:
         schema:
@@ -71,8 +71,10 @@ responses:
         examples:
           Bad Request:
             $ref: '../../components/examples.yaml#/examples/BadRequestResponseExample'
-          Unauthrorized Request:
+          Forbidden access:
             $ref: '../../components/examples.yaml#/examples/UnauthorizedResponseExample'
+          Too many requests:
+            $ref: '../../components/examples.yaml#/examples/RateLimitResponseExample'
   '5XX':
     description: Server Error Response
     content:
