--- a/static/oas/iot/api/public/alertResolve.yaml
+++ b/static/oas/iot/api/public/alertResolve.yaml
@@ -41,7 +41,7 @@ requestBody:
 
 responses:
   '200':
-    description: Successful Response (We only show some important fields here)
+    description: Successful Response
     content:
       application/json:
         schema:
@@ -58,8 +58,10 @@ responses:
         examples:
           Bad Request:
             $ref: '../../components/examples.yaml#/examples/BadRequestResponseExample'
-          Unauthrorized Request:
+          Forbidden access:
             $ref: '../../components/examples.yaml#/examples/UnauthorizedResponseExample'
+          Too many requests:
+            $ref: '../../components/examples.yaml#/examples/RateLimitResponseExample'
   '5XX':
     description: Server Error Response
     content:
