--- a/static/oas/iot/api/public/deviceDetailPerIP.yaml
+++ b/static/oas/iot/api/public/deviceDetailPerIP.yaml
@@ -5,7 +5,7 @@ parameters:
   required: true
   schema:
     type: string
-- description: TThe IP address of a device for which you want to get details.
+- description: The IP address of a device for which you want to get details.
   in: query
   name: ip
   required: true
@@ -13,7 +13,7 @@ parameters:
     type: string
 responses:
   '200':
-    description: Successful Response (We only show some important fields here)
+    description: Successful Response (We only show some important fields here.)
     content:
       application/json:
         schema:
@@ -30,8 +30,10 @@ responses:
         examples:
           Bad Request:
             $ref: '../../components/examples.yaml#/examples/BadRequestResponseExample'
-          Unauthrorized Request:
+          Forbidden access:
             $ref: '../../components/examples.yaml#/examples/UnauthorizedResponseExample'
+          Too many requests:
+            $ref: '../../components/examples.yaml#/examples/RateLimitResponseExample'
   '5XX':
     description: Server Error Response
     content:
