--- a/static/oas/iot/api/public/deviceList.yaml
+++ b/static/oas/iot/api/public/deviceList.yaml
@@ -59,7 +59,7 @@ parameters:
 
 responses:
   '200':
-    description: Successful Response (We only show some important fields here)
+    description: Successful Response (We only show some important fields here.)
     content:
       application/json:
         schema:
@@ -76,8 +76,10 @@ responses:
         examples:
           Bad Request:
             $ref: '../../components/examples.yaml#/examples/BadRequestResponseExample'
-          Unauthrorized Request:
+          Forbidden access:
             $ref: '../../components/examples.yaml#/examples/UnauthorizedResponseExample'
+          Too many requests:
+            $ref: '../../components/examples.yaml#/examples/RateLimitResponseExample'
   '5XX':
     description: Server Error Response
     content:
