--- a/static/oas/iot/api/public/profileMapping.yaml
+++ b/static/oas/iot/api/public/profileMapping.yaml
@@ -7,7 +7,7 @@ parameters:
     type: string
 responses:
   '200':
-    description: Successful Response (We only show some part of result here)
+    description: Successful Response (We only show some important fields here.)
     content:
       application/json:
         schema:
@@ -24,8 +24,10 @@ responses:
         examples:
           Bad Request:
             $ref: '../../components/examples.yaml#/examples/BadRequestResponseExample'
-          Unauthrorized Request:
+          Forbidden access:
             $ref: '../../components/examples.yaml#/examples/UnauthorizedResponseExample'
+          Too many requests:
+            $ref: '../../components/examples.yaml#/examples/RateLimitResponseExample'
   '5XX':
     description: Server Error Response
     content:
