--- a/static/oas/iot/components/examples.yaml
+++ b/static/oas/iot/components/examples.yaml
@@ -1,20 +1,26 @@
 examples:
   BadRequestResponseExample:
     value: {
-      code: '400',
-      msg: invalid request
+      code: 400,
+      msg: Bad Request. This occurs when an HTTP request contains an invalid query string.
     }
 
   UnauthorizedResponseExample:
     value: {
-      code: '403',
-      msg: no access
+      code: 403,
+      msg: Forbidden access. Either the provided API key is invalid or it does not have the required RBAC permissions to run this API.
+    }
+
+  RateLimitResponseExample:
+    value: {
+      code: 429,
+      msg: Too many requests. The number of requests for device details for a single device exceeded the rate limit of 180 queries per minute per tenant.
     }
 
   ServerErrorResponseExample:
     value: {
-      code: '500',
-      msg: internal server error
+      code: 500,
+      msg: Internal server error. A unified status for API communication type errors.
     }
 
   DeviceDetailResponseExample:
