--- a/static/oas/iot/api/public/bulkUpdateCustomAttribute.yaml
+++ b/static/oas/iot/api/public/bulkUpdateCustomAttribute.yaml
@@ -1,35 +1,37 @@
 parameters:
-- description: The customer ID to which the API call is directed
-  in: query
-  name: customerid
-  required: true
-  schema:
-    type: string
-- description: 'The source of the device information: Cisco WLAN controllers'
-  in: query
-  name: updateSource
-  required: true
-  schema:
-    type: string
+  - description: The customer ID to which the API call is directed
+    in: query
+    name: customerid
+    required: true
+    schema:
+      type: string
+  - description: 'The source of the device information: Custom Attribute'
+    in: query
+    name: updateSource
+    required: true
+    schema:
+      type: string
+      enum:
+      - 'customAttribute'
 requestBody:
   required: true
   content:
     application/json:
       schema:
-        $ref: '../../components/schemas.yaml#/schemas/CiscoWLCBulkUpdateDevicePayloadSchema'
+        $ref: '../../components/schemas.yaml#/schemas/CustomAttributeBulkUpdateDevicePayloadSchema'
       examples:
         payloadExample:
-          $ref: '../../components/examples.yaml#/examples/CiscoWLCDeviceBulkUpdatePayloadExample'
+          $ref: '../../components/examples.yaml#/examples/CustomAttributeBulkUpdatePayloadExample'
 responses:
   '200':
     description: Successful Response
     content:
       application/json:
         schema:
-          $ref: '../../components/schemas.yaml#/schemas/BulkUpdateDeviceResponseSchema'
+          $ref: '../../components/schemas.yaml#/schemas/CustomAttributeBulkUpdateDeviceResponseSchema'
         examples:
           resolveSecurityAlertResponseExample:
-            $ref: '../../components/examples.yaml#/examples/CiscoWLCBulkUpdateDevicesResponseExample'
+            $ref: '../../components/examples.yaml#/examples/CustomAttributeBulkUpdateDevicesResponseExample'
   '4XX':
     description: Client Error Response
     content:
