--- a/static/oas/iot/api/public/bulkUpdateSNMP.yaml
+++ b/static/oas/iot/api/public/bulkUpdateSNMP.yaml
@@ -5,7 +5,7 @@ parameters:
   required: true
   schema:
     type: string
-- description: Source of integration
+- description: 'The source of the device information: SNMP'
   in: query
   name: updateSource
   required: true
