Install openapi plugin with latest docusaurus

--- a/package.json
+++ b/package.json
@@ -8,24 +8,28 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear"
+    "clear": "docusaurus clear",
+    "gen-api-docs": "docusaurus gen-api-docs",
+    "clean-api-docs": "docusaurus clean-api-docs"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.4",
-    "@docusaurus/mdx-loader": "2.0.0-beta.4",
-    "@docusaurus/plugin-client-redirects": "2.0.0-beta.4",
-    "@docusaurus/plugin-content-blog": "2.0.0-beta.4",
-    "@docusaurus/plugin-content-docs": "2.0.0-beta.4",
-    "@docusaurus/plugin-content-pages": "2.0.0-beta.4",
-    "@docusaurus/plugin-google-analytics": "2.0.0-beta.4",
-    "@docusaurus/plugin-google-gtag": "2.0.0-beta.4",
-    "@docusaurus/plugin-sitemap": "2.0.0-beta.4",
-    "@docusaurus/preset-classic": "2.0.0-beta.4",
-    "@docusaurus/theme-classic": "2.0.0-beta.4",
-    "@docusaurus/theme-live-codeblock": "2.0.0-beta.4",
-    "@docusaurus/theme-search-algolia": "2.0.0-beta.4",
-    "@docusaurus/types": "2.0.0-beta.4",
-    "@docusaurus/utils": "2.0.0-beta.4",
+    "@docusaurus/core": "2.0.0-rc.1",
+    "@docusaurus/mdx-loader": "2.0.0-rc.1",
+    "@docusaurus/plugin-client-redirects": "2.0.0-rc.1",
+    "@docusaurus/plugin-content-blog": "2.0.0-rc.1",
+    "@docusaurus/plugin-content-docs": "2.0.0-rc.1",
+    "@docusaurus/plugin-content-pages": "2.0.0-rc.1",
+    "@docusaurus/plugin-google-analytics": "2.0.0-rc.1",
+    "@docusaurus/plugin-google-gtag": "2.0.0-rc.1",
+    "@docusaurus/plugin-sitemap": "2.0.0-rc.1",
+    "@docusaurus/preset-classic": "2.0.0-rc.1",
+    "@docusaurus/theme-classic": "2.0.0-rc.1",
+    "@docusaurus/theme-live-codeblock": "2.0.0-rc.1",
+    "@docusaurus/theme-search-algolia": "2.0.0-rc.1",
+    "@docusaurus/types": "2.0.0-rc.1",
+    "@docusaurus/utils": "2.0.0-rc.1",
+    "docusaurus-plugin-openapi-docs": "^1.1.2",
+    "docusaurus-theme-openapi-docs": "^1.1.2",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "mdx-mermaid": "^1.2.2",
