update the sample response for get alerts

--- a/static/oas/iot/components/examples.yaml
+++ b/static/oas/iot/components/examples.yaml
@@ -238,9 +238,9 @@ examples:
           zb_ticketid: 'alert-hNMleG1nW',
           id: '5eb9fa8127b736d82bf7840a',
           profile: 'Macintosh-MacPro',
+          profile_vertical: 'Medical',
           category: 'Personal Computer',
           hostname: 'cntl-201-2',
-          internal_hostname: 'cntl-201-2',
           siteid: '0',
           serviceLevel': '',
           reason_history: [],
