--- a/firebase.json
+++ b/firebase.json
@@ -17,12 +17,57 @@
     "redirects": [
       {
         "source": "/api/tp",
-        "destination": "https://pan.dev/cdss/threat-vault/api",
+        "destination": "https://pan.dev/threat-vault/api",
         "type": 301
       },
       {
         "source": "/api/tp/**",
-        "destination": "https://pan.dev/cdss/threat-vault/api",
+        "destination": "https://pan.dev/threat-vault/api",
+        "type": 301
+      },
+      {
+        "source": "/api/iot/",
+        "destination": "https://pan.dev/iot/api",
+        "type": 301
+      },
+      {
+        "source": "/api/iot/**",
+        "destination": "https://pan.dev/iot/api",
+        "type": 301
+      },
+      {
+        "source": "/docs/expedition",
+        "destination": "https://pan.dev/expedition/docs",
+        "type": 301
+      },
+      {
+        "source": "/docs/expedition/**",
+        "destination": "https://pan.dev/expedition/docs",
+        "type": 301
+      },
+      {
+        "source": "/docs/apis/**",
+        "destination": "https://pan.dev/panos/docs",
+        "type": 301
+      },
+      {
+        "source": "/docs/apis",
+        "destination": "https://pan.dev/panos/docs",
+        "type": 301
+      },
+      {
+        "source": "/docs",
+        "destination": "https://pan.dev",
+        "type": 301
+      },
+      {
+        "source": "/docs/**",
+        "destination": "https://pan.dev",
+        "type": 301
+      },
+      {
+        "source": "/",
+        "destination": "https://pan.dev",
         "type": 301
       }
     ]
